remove ai slop, unlockable cosmetics, asset editor, codecs