@@ -1,8 +1,12 @@
 package com.goodwitchlalya.lalyan_cosmetic_core.util;
 
-import com.goodwitchlalya.lalyan_cosmetic_core.component.CosmeticData;
-import com.google.gson.annotations.Expose;
-import com.google.gson.annotations.SerializedName;
+import com.goodwitchlalya.lalyan_cosmetic_core.component.CosmeticComponent;
+import com.goodwitchlalya.lalyan_cosmetic_core.component.EquippedCosmetic;
+import com.hypixel.hytale.codec.Codec;
+import com.hypixel.hytale.codec.KeyedCodec;
+import com.hypixel.hytale.codec.builder.BuilderCodec;
+import com.hypixel.hytale.codec.codecs.EnumCodec;
+import com.hypixel.hytale.codec.codecs.map.MapCodec;
 import com.hypixel.hytale.component.Ref;
 import com.hypixel.hytale.component.Store;
 import com.hypixel.hytale.protocol.PlayerSkin;
@@ -15,435 +19,257 @@ import com.hypixel.hytale.server.core.modules.entity.component.ModelComponent;
 import com.hypixel.hytale.server.core.modules.entity.player.PlayerSkinComponent;
 import com.hypixel.hytale.server.core.universe.world.storage.EntityStore;
 
+import javax.annotation.Nonnull;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 // A singleton registry that manages all custom cosmetic and character attachments.
 // It handles loading, storing, and applying these attachments to player models.
 public class AttachmentsRegistry {
-    
-    // Singleton instance of the registry.
     private static AttachmentsRegistry INSTANCE;
-    
-    // The main map storing all registered attachments, keyed by a unique ID (e.g., "assetpack#cosmeticName").
-    private final Map<String, Attachment> attachmentsRegistry = new HashMap<>();
-    
+
     // A list of slots that doesn't make the override by default
-    public final List<Slot> nonOverridingSlots = List.of(
-        CharacterSlot.Hair_Extension
-    );
-    
-    public List<SlotConnection> connections = List.of(
-        new SlotConnection(CharacterSlot.Hair_Extension, CharacterSlot.Haircuts, "Hair", (skin) -> skin.haircut.split("\\.")[1]),
-        new SlotConnection(CharacterSlot.Mouths, null, "Skin", (skin) -> skin.bodyCharacteristic.split("\\.")[1])
-    );
-    
+    public final List<CosmeticSlot> nonOverridingSlots = List.of(CosmeticSlot.Hair_Extension);
+
+    private final List<SlotConnection> connections = List.of(new SlotConnection(CosmeticSlot.Hair_Extension, CosmeticSlot.Haircuts, "Hair", (skin) -> skin.haircut.split("\\.")[1]), new SlotConnection(CosmeticSlot.Mouths, null, "Skin", (skin) -> skin.bodyCharacteristic.split("\\.")[1]));
+
     // Enum for top-level UI categories.
     public enum TopLevelTypes {Head, General, Torso, Legs, Capes, All}
-    
+
     // Enum to differentiate between character parts and wearable cosmetics.
     public enum SlotType {CHARACTER, COSMETIC}
-    
-    // Common interface for all cosmetic/character slots.
-    // Provides a way to group and handle different slot types polymorphically.
-    public interface Slot {
-        SlotType getType();
-        
-        // A utility method to find a Slot enum constant by its name,
-        // searching through both CosmeticSlot and CharacterSlot.
-        static Slot valueOf(String name) {
-            try {
-                return CosmeticSlot.valueOf(name);
-            } catch (IllegalArgumentException _) {
-                try {
-                    return CharacterSlot.valueOf(name);
-                } catch (IllegalArgumentException e) {
-                    return null;
-                }
-            }
-        }
-        
-        String name();
-    }
-    
-    // Enum representing slots for built-in character features like eyes and hair.
-    public enum CharacterSlot implements Slot {
-        Beards, Ears, Eyebrows, Eyes, Faces, Mouths, Haircuts, Hair_Extension, Wings, Tails, Horns, Face_Details;
-        
-        @Override
-        public SlotType getType() {
-            return SlotType.CHARACTER;
-        }
-    }
-    
+
     // Enum representing slots for wearable cosmetics like hats and capes.
-    public enum CosmeticSlot implements Slot {
-        Capes, Face_Accessories, Gloves, Head, Ears_Accessories, Overpants, Overtops, Pants, Shoes, Undertops, Underwears;
-        
-        @Override
+    public enum CosmeticSlot {
+        Capes(SlotType.COSMETIC),
+        Face_Accessories(SlotType.COSMETIC),
+        Gloves(SlotType.COSMETIC),
+        Head(SlotType.COSMETIC),
+        Ears_Accessories(SlotType.COSMETIC),
+        Overpants(SlotType.COSMETIC),
+        Overtops(SlotType.COSMETIC),
+        Pants(SlotType.COSMETIC),
+        Shoes(SlotType.COSMETIC),
+        Undertops(SlotType.COSMETIC),
+        Underwears(SlotType.COSMETIC),
+
+        Beards(SlotType.CHARACTER),
+        Ears(SlotType.CHARACTER),
+        Eyebrows(SlotType.CHARACTER),
+        Eyes(SlotType.CHARACTER),
+        Faces(SlotType.CHARACTER),
+        Mouths(SlotType.CHARACTER),
+        Haircuts(SlotType.CHARACTER),
+        Hair_Extension(SlotType.CHARACTER),
+        Wings(SlotType.CHARACTER),
+        Tails(SlotType.CHARACTER),
+        Horns(SlotType.CHARACTER),
+        Face_Details(SlotType.CHARACTER);
+
+        final SlotType slotType;
+
+        CosmeticSlot(SlotType slotType) {
+            this.slotType = slotType;
+        }
+
         public SlotType getType() {
-            return SlotType.COSMETIC;
+            return slotType;
+        }
+
+        public static Codec<CosmeticSlot> codec() {
+            var c = new EnumCodec<>(AttachmentsRegistry.CosmeticSlot.class);
+            for (CosmeticSlot value : CosmeticSlot.values()) {
+                c.documentKey(value, "Slot-type: " + value.slotType.name());
+            }
+            return c;
         }
     }
-    
-    public static class GradientSet {
-        private final String name;
-        private final List<String> colourList;
-        
-        public GradientSet(String name, List<String> colourList) {
-            this.name = name;
-            this.colourList = colourList;
-        }
-        
+
+    public record GradientSet(String name, List<String> colourList) {
         public GradientSet(String name) {
-            this.name = name;
-            this.colourList = new ArrayList<>();
+            this(name, new ArrayList<>());
         }
-        
-        public String getName() {
-            return name;
-        }
-        
-        public List<String> getColourList() {
-            return colourList;
-        }
-        
+
         public boolean add(String colour) {
             return colourList.add(colour);
         }
-        
+
         public boolean remove(String colour) {
             return colourList.remove(colour);
         }
-        
+
         public boolean containsColour(String colour) {
             return colourList.contains(colour);
         }
-        
+
         @Override
         public String toString() {
             return String.format("%s: [%s]", name, colourList);
         }
-        
+
     }
-    
+
     public static class ColoursDataSet {
-        
+
         private final List<GradientSet> gradientSets;
-        
+
         public ColoursDataSet(List<GradientSet> gradientSets) {
             this.gradientSets = gradientSets;
         }
-        
+
         public ColoursDataSet() {
             this.gradientSets = new ArrayList<>();
         }
-        
+
         public boolean add(GradientSet gradientSet) {
             return gradientSets.add(gradientSet);
         }
-        
+
         public boolean remove(GradientSet gradientSet) {
             return gradientSets.remove(gradientSet);
         }
-        
+
         public boolean contains(GradientSet gradientSet) {
             return gradientSets.contains(gradientSet);
         }
-        
+
         public boolean contains(String gradientSet) {
             return gradientSets.stream().anyMatch((set) -> set.name.equals(gradientSet));
         }
-        
+
         public GradientSet getGradientSet(String gradientSetName) {
             return gradientSets.stream().filter((set) -> set.name.equals(gradientSetName)).findFirst().orElse(null);
         }
-        
+
     }
-    
+
     public static ColoursDataSet coloursDataSet = new ColoursDataSet();
-    
+
     private static final GradientSet coloredCottonSet = new GradientSet("Colored_Cotton");
-    
+
     public enum coloredCottonSetNames {
-        Black,
-        Blue,
-        Brown,
-        Charcoal,
-        Cream,
-        Green,
-        Grey,
-        Lime,
-        Orange,
-        Pink,
-        Purple,
-        Red,
-        Turquoise,
-        White,
-        Yellow
+        Black, Blue, Brown, Charcoal, Cream, Green, Grey, Lime, Orange, Pink, Purple, Red, Turquoise, White, Yellow
     }
-    
+
     private static final GradientSet eyesGradientSet = new GradientSet("Eyes_Gradient");
-    
+
     public enum eyesGradientSetNames {
-        Black,
-        Blond,
-        Blue,
-        BlueLight,
-        Brown,
-        BrownDark,
-        BrownLight,
-        Green,
-        GreenLight,
-        Grey,
-        Honey,
-        Orange,
-        Pink,
-        Purple,
-        Red,
-        RedDark,
-        Turquoise,
-        White
+        Black, Blond, Blue, BlueLight, Brown, BrownDark, BrownLight, Green, GreenLight, Grey, Honey, Orange, Pink, Purple, Red, RedDark, Turquoise, White
     }
-    
+
     private static final GradientSet fadedLeatherSet = new GradientSet("Faded_Leather");
-    
+
     public enum fadedLeatherSetNames {
-        Black,
-        Blue,
-        BlueDark,
-        Brown,
-        BrownDark,
-        Green,
-        Grey,
-        Lime,
-        Orange,
-        Orange_Tan,
-        Pink,
-        Purple,
-        Red,
-        Turquoise,
-        Violet,
-        White,
-        Yellow
+        Black, Blue, BlueDark, Brown, BrownDark, Green, Grey, Lime, Orange, Orange_Tan, Pink, Purple, Red, Turquoise, Violet, White, Yellow
     }
-    
+
     private static final GradientSet fantasyCottonSet = new GradientSet("Fantasy_Cotton");
-    
+
     public enum fantasyCottonSetNames {
-        Beige,
-        Black,
-        Blue,
-        Brown,
-        Green,
-        Lime,
-        Orange,
-        Pink,
-        Purple,
-        Red,
-        Turquoise,
-        Yellow
+        Beige, Black, Blue, Brown, Green, Lime, Orange, Pink, Purple, Red, Turquoise, Yellow
     }
-    
+
     private static final GradientSet fantasyCottonDarkSet = new GradientSet("Fantasy_Cotton_Dark");
-    
+
     public enum fantasyCottonDarkSetNames {
-        Black,
-        Blue,
-        BlueDark,
-        Brown,
-        Green,
-        Lime,
-        Orange,
-        Pink,
-        Purple,
-        Red,
-        Turquoise,
-        Yellow
+        Black, Blue, BlueDark, Brown, Green, Lime, Orange, Pink, Purple, Red, Turquoise, Yellow
     }
-    
+
     private static final GradientSet flashySyntheticSet = new GradientSet("Flashy_Synthetic");
-    
+
     public enum flashySyntheticSetNames {
-        Black,
-        Blue,
-        Green,
-        Grey,
-        Orange,
-        OrangePastel,
-        Pink,
-        PinkPastel,
-        Purple,
-        Red,
-        Turquoise,
-        Violet,
-        White,
-        Yellow
+        Black, Blue, Green, Grey, Orange, OrangePastel, Pink, PinkPastel, Purple, Red, Turquoise, Violet, White, Yellow
     }
-    
+
     private static final GradientSet hairSet = new GradientSet("Hair");
-    
+
     public enum hairSetNames {
-        Black,
-        Blond,
-        BlondCaramel,
-        BlondPlatinum,
-        BlondSand,
-        Blue,
-        Blue_Anthracite,
-        BlueDark,
-        BlueLight,
-        Brown,
-        BrownDark,
-        BrownDarker,
-        BrownLight,
-        BrownSemiDark,
-        BrownSemiLight,
-        Bubblegum,
-        Copper,
-        Green,
-        Grey,
-        GreyAsh,
-        GreyPurple,
-        Lavender,
-        Pink,
-        PinkBerry,
-        PitchBlack,
-        Purple,
-        Red,
-        RedDark,
-        Turquoise,
-        White
+        Black, Blond, BlondCaramel, BlondPlatinum, BlondSand, Blue, Blue_Anthracite, BlueDark, BlueLight, Brown, BrownDark, BrownDarker, BrownLight, BrownSemiDark, BrownSemiLight, Bubblegum, Copper, Green, Grey, GreyAsh, GreyPurple, Lavender, Pink, PinkBerry, PitchBlack, Purple, Red, RedDark, Turquoise, White
     }
-    
+
     private static final GradientSet jeanGenericSet = new GradientSet("Jean_Generic");
-    
+
     public enum jeanGenericSetNames {
-        Black,
-        Blue,
-        Blue_Night,
-        BluePastel,
-        GreyBlue,
-        GreyDark,
-        GreyLight,
-        Marine_Blue,
-        Maroon,
-        Turquoise_Dark
+        Black, Blue, Blue_Night, BluePastel, GreyBlue, GreyDark, GreyLight, Marine_Blue, Maroon, Turquoise_Dark
     }
-    
+
     private static final GradientSet ornamentedMetalSet = new GradientSet("Ornamented_Metal");
-    
+
     public enum ornamentedMetalSetNames {
-        Brass_Purple,
-        Copper_Green,
-        Gold_Red,
-        Iron_Black,
-        Silver_Blue
+        Brass_Purple, Copper_Green, Gold_Red, Iron_Black, Silver_Blue
     }
-    
+
     private static final GradientSet pastelCottonSet = new GradientSet("Pastel_Cotton");
-    
+
     public enum pastelCottonSetNames {
-        Black,
-        Blue,
-        Carmin,
-        Green,
-        Grey,
-        Lime,
-        Orange,
-        Pink,
-        PinkPastel,
-        Purple,
-        PurplePastel,
-        Red,
-        Turquoise,
-        White,
-        Yellow
+        Black, Blue, Carmin, Green, Grey, Lime, Orange, Pink, PinkPastel, Purple, PurplePastel, Red, Turquoise, White, Yellow
     }
-    
+
     private static final GradientSet rottenFabricSet = new GradientSet("Rotten_Fabric");
-    
+
     public enum rottenFabricSetNames {
-        Blue,
-        Brown,
-        Yellow
+        Blue, Brown, Yellow
     }
-    
+
     private static final GradientSet shinyFabricSet = new GradientSet("Shiny_Fabric");
-    
+
     public enum shinyFabricSetNames {
-        Black,
-        Blue,
-        Brown,
-        Green,
-        Grey,
-        Lime,
-        Orange,
-        Pink,
-        Purple,
-        Red,
-        Turquoise,
-        Violet,
-        White,
-        Yellow
+        Black, Blue, Brown, Green, Grey, Lime, Orange, Pink, Purple, Red, Turquoise, Violet, White, Yellow
     }
-    
+
     private static final GradientSet skinSet = new GradientSet("Skin");
-    
+
     public enum skinSetNames {
-        s01, s02, s03, s04, s05, s06, s07, s08, s09, s10,
-        s11, s12, s13, s14, s15, s16, s17, s18, s19, s20,
-        s21, s22, s23, s24, s25, s26, s27, s28, s29, s30,
-        s31, s32, s33, s34, s35, s36, s37, s38, s39, s40,
-        s41, s42, s43, s44, s45, s46, s47, /*s48, s49, s50,
+        s01, s02, s03, s04, s05, s06, s07, s08, s09, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21, s22, s23, s24, s25, s26, s27, s28, s29, s30, s31, s32, s33, s34, s35, s36, s37, s38, s39, s40, s41, s42, s43, s44, s45, s46, s47, /*s48, s49, s50,
         s51, s52*/;
-        
+
         public String getName() {
             return this.name().replace("s", "");
         }
     }
-    
+
     static {
         /* Adding Colored_Cotton colours to the set */
         Arrays.stream(coloredCottonSetNames.values()).forEach(value -> coloredCottonSet.add(value.name()));
-        
+
         /* Adding Eyes_Gradient colours to the set */
         Arrays.stream(eyesGradientSetNames.values()).forEach(value -> eyesGradientSet.add(value.name()));
-        
+
         /* Adding Faded_Leather colours to the set */
         Arrays.stream(fadedLeatherSetNames.values()).forEach(value -> fadedLeatherSet.add(value.name()));
-        
+
         /* Adding Fantasy_Cotton colours to the set */
         Arrays.stream(fantasyCottonSetNames.values()).forEach(value -> fantasyCottonSet.add(value.name()));
-        
+
         /* Adding Fantasy_Cotton_Dark colours to the set */
         Arrays.stream(fantasyCottonDarkSetNames.values()).forEach(value -> fantasyCottonDarkSet.add(value.name()));
-        
+
         /* Adding Flashy_Synthetic colours to the set */
         Arrays.stream(flashySyntheticSetNames.values()).forEach(value -> flashySyntheticSet.add(value.name()));
-        
+
         /* Adding Hair colours to the set */
         Arrays.stream(hairSetNames.values()).forEach(value -> hairSet.add(value.name()));
-        
+
         /* Adding Jean_Generic colours to the set */
         Arrays.stream(jeanGenericSetNames.values()).forEach(value -> jeanGenericSet.add(value.name()));
-        
+
         /* Adding Ornamented_Metal colours to the set */
         Arrays.stream(ornamentedMetalSetNames.values()).forEach(value -> ornamentedMetalSet.add(value.name()));
-        
+
         /* Adding Pastel_Cotton colours to the set */
         Arrays.stream(pastelCottonSetNames.values()).forEach(value -> pastelCottonSet.add(value.name()));
-        
+
         /* Adding Rotten_Fabric colours to the set */
         Arrays.stream(rottenFabricSetNames.values()).forEach(value -> rottenFabricSet.add(value.name()));
-        
+
         /* Adding Shiny_Fabric colours to the set */
         Arrays.stream(shinyFabricSetNames.values()).forEach(value -> shinyFabricSet.add(value.name()));
-        
+
         /* Adding Skin colours to the set */
         Arrays.stream(skinSetNames.values()).forEach(value -> skinSet.add(value.getName()));
-        
+
         coloursDataSet.add(coloredCottonSet);
         coloursDataSet.add(eyesGradientSet);
         coloursDataSet.add(fadedLeatherSet);
@@ -458,345 +284,190 @@ public class AttachmentsRegistry {
         coloursDataSet.add(shinyFabricSet);
         coloursDataSet.add(skinSet);
     }
-    
+
     // Provides access to the singleton instance of the registry.
     public static AttachmentsRegistry get() {
         if (INSTANCE == null) INSTANCE = new AttachmentsRegistry();
-        
+
         return INSTANCE;
     }
-    
+
     // Returns the raw map of registered attachments.
-    public Map<String, Attachment> getAttachmentsRegistry() {
-        return attachmentsRegistry;
+    public static CustomCosmetic get(String string) {
+        return CustomCosmetic.getAssetMap().getAssetMap().get(string);
     }
-    
+
+    public static Map<String, CustomCosmetic> getAll() {
+        return CustomCosmetic.getAssetMap().getAssetMap();
+    }
+
     // A record to hold data for a single cosmetic variant (texture and icon).
-    public record Variant(@Expose String texture, @Expose String icon) {
-    }
-    
-    public record SlotConnection(Slot mainSlot, Slot connectedSlot, String gradientSet, Function<PlayerSkin, String> defaultId) {
-    }
-    
-    public static class Alternative {
-        @Expose
-        @SerializedName("gradient_set")
-        public String gradientSet;
-        @Expose
-        public Map<String, Variant> variants;
-    }
-    
-    public static class Colour {
-        @Expose
-        @SerializedName("gradient_set")
-        private String gradientSet;
-        @Expose
-        @SerializedName("gradient_id")
-        private String gradientID;
-        
-        public Colour(String gradientSet, String gradientID) {
-            set(gradientSet, gradientID);
+    public static class Variant {
+        String texture;
+        String icon;
+
+        public static final BuilderCodec<Variant> CODEC = BuilderCodec.builder(Variant.class, Variant::new).append(new KeyedCodec<>("Texture", Codec.STRING), (data, value) -> data.texture = value, (data) -> data.texture).add().append(new KeyedCodec<>("Icon", Codec.STRING), (data, value) -> data.icon = value, (data) -> data.icon).add().build();
+
+        public Variant() {
+
         }
-        
-        public Colour(String gradient) {
-            this.set(gradient);
-        }
-        
-        public void set(String gradient) {
-            String[] split = gradient.split(":");
-            set(split[0], split[1]);
-        }
-        
-        public void set(String gradientSet, String gradientID) {
-            this.gradientSet = gradientSet;
-            this.gradientID = gradientID;
-        }
-        
-        public void setGradientSet(String gradientSet) {
-            set(gradientSet, this.gradientID);
-        }
-        
-        public void setGradientID(String gradientID) {
-            set(this.gradientSet, gradientID);
-        }
-        
-        public String getGradientSet() {
-            return gradientSet;
-        }
-        
-        public String getGradientID() {
-            return gradientID;
-        }
-        
-        public String getF() {
-            return gradientSet + ":" + gradientID;
-        }
-        
-        public static Colour empty() {
-            return new Colour("", "");
-        }
-        
-        @Override
-        public String toString() {
-            return getF();
-        }
-        
-        public String apply(String cosmeticId) {
-            return cosmeticId + "%" + gradientSet + ":" + gradientID;
-        }
-    }
-    
-    // A class holding all the data for a single attachment, loaded from asset files or JSON.
-    // This includes paths to model, texture, icon, as well as variants and slot overrides.
-    public static class AttachmentData {
-        @Expose
-        private final String model;
-        @Expose
-        private final String texture;
-        @Expose
-        private final String icon;
-        @Expose
-        private final Alternative alternatives;
-        @Expose
-        @SerializedName("slot_overrides")
-        private final List<String> slotOverrides;
-        @Expose
-        @SerializedName("default_color")
-        private final Colour defaultColor;
-        
-        public Slot slot; // The primary slot this attachment belongs to.
-        
-        public AttachmentData(String model, String texture, String icon, Map<String, Variant> variants, String gradientSet, List<String> slotOverrides, Colour defaultColor) {
-            this.model = model;
-            this.texture = texture;
-            this.icon = icon;
-            this.slotOverrides = slotOverrides;
-            this.defaultColor = defaultColor;
-            
-            this.alternatives = new Alternative();
-            
-            if (variants != null && !variants.isEmpty()) {
-                this.alternatives.variants = variants;
-                return;
-            }
-            
-            if (gradientSet != null && !gradientSet.isEmpty()) {
-                this.alternatives.gradientSet = gradientSet;
-            }
-        }
-        
-        public String model() {
-            return model;
-        }
-        
+
         public String texture() {
             return texture;
         }
-        
+
         public String icon() {
             return icon;
         }
-        
-        public Slot slot() {
-            return slot;
+    }
+
+    public record SlotConnection(CosmeticSlot mainSlot, CosmeticSlot connectedSlot, String gradientSet,
+                                 Function<PlayerSkin, String> defaultId) {
+    }
+
+    public static class Alternative {
+        public String gradientSet;
+        public Map<String, Variant> variants;
+
+        public static final BuilderCodec<Alternative> CODEC = BuilderCodec.builder(Alternative.class, Alternative::new).append(new KeyedCodec<>("GradientSet", Codec.STRING), (data, value) -> data.gradientSet = value, (data) -> data.gradientSet).add().append(new KeyedCodec<>("Variants", new MapCodec<>(Variant.CODEC, ConcurrentHashMap::new)), (data, value) -> data.variants = value, (data) -> data.variants).add().build();
+    }
+
+    public static class Colour {
+        public static final BuilderCodec<Colour> CODEC = BuilderCodec.builder(Colour.class, Colour::new).append(new KeyedCodec<>("GradientSet", Codec.STRING), (s, v) -> s.gradientSet = v, s -> s.gradientSet).add().append(new KeyedCodec<>("GradientID", Codec.STRING), (s, v) -> s.gradientID = v, s -> s.gradientID).add().build();
+
+        private String gradientSet;
+        private String gradientID;
+
+        private Colour() {
         }
-        
-        public Map<String, Variant> variants() {
-            return alternatives.variants != null ? alternatives.variants : Map.of();
+
+        public Colour(String gradientSet, String gradientID) {
+            this.gradientSet = gradientSet;
+            this.gradientID = gradientID;
         }
-        
-        public List<String> slotOverrides() {
-            return slotOverrides != null ? slotOverrides : List.of();
+
+        public void setGradientSet(String gradientSet) {
+            this.gradientSet = gradientSet;
         }
-        
-        public String gradientSet() {
-            return alternatives.gradientSet != null ? alternatives.gradientSet : "";
+
+        public void setGradientID(String gradientID) {
+            this.gradientID = gradientID;
         }
-        
-        public Colour defaultColor() {
-            return defaultColor;
+
+        public String getGradientSet() {
+            return gradientSet;
+        }
+
+        public String getGradientID() {
+            return gradientID;
         }
     }
-    
-    // A record representing a fully processed attachment, containing its name and its data.
-    public record Attachment(String name, AttachmentData data) {
-        // Creates a Hytale ModelAttachment object from this attachment's data.
-        // @param variant The name of the variant to use. If empty, the default texture is used.
-        // @return A ModelAttachment ready to be applied to a player model.
-        private ModelAttachment makeModel(String variant, Colour colour) {
-            if (variant.isEmpty()) {
-                return new ModelAttachment(
-                    data.model(),
-                    data.texture(),
-                    colour.getGradientSet(),
-                    colour.getGradientID(),
-                    1
-                );
-            }
-            
-            Variant v = data.variants().get(variant);
-            
-            return new ModelAttachment(
-                data.model(),
-                v.texture(),
-                colour.getGradientSet(),
-                colour.getGradientID(),
-                1
-            );
-        }
-        
-        public ModelAttachment makeModel(String variant) {
-            return makeModel(variant, new Colour("", ""));
-        }
-        
-        public ModelAttachment makeModel(String set, String id) {
-            return makeModel("", new Colour(set, id));
-        }
-        
-        public List<ModelAttachment> makeModelsWithColorSet(String colourSet) {
-            List<ModelAttachment> internal = new ArrayList<ModelAttachment>();
-            GradientSet gradientSet = coloursDataSet.getGradientSet(colourSet);
-            
-            gradientSet.colourList.forEach(colour -> {
-                internal.add(makeModel("", new Colour(colourSet, colour)));
-            });
-            
-            return internal;
-        }
-    }
-    
+
     // The core method for rebuilding a player's skin. It combines the player's default skin
     // with the custom cosmetics they have equipped.
     // @param ref A reference to the player entity.
     public void rebuildSkinWithCosmetics(Ref<EntityStore> ref) {
         Store<EntityStore> store = ref.getStore();
-        
-        CosmeticData data = store.getComponent(ref, CosmeticData.INSTANCE);
+
+        CosmeticComponent data = store.getComponent(ref, CosmeticComponent.getComponentType());
         Player player = store.getComponent(ref, Player.getComponentType());
         Model model = store.getComponent(ref, ModelComponent.getComponentType()).getModel();
         PlayerSkin playerSkin = store.getComponent(ref, PlayerSkinComponent.getComponentType()).getPlayerSkin();
-        
+
         if (data == null) {
-            store.addComponent(ref, CosmeticData.INSTANCE, new CosmeticData());
+            store.addComponent(ref, CosmeticComponent.getComponentType(), new CosmeticComponent());
             return;
         }
-        
+
         List<ModelAttachment> attachments = new ArrayList<>();
-        Map<Slot, Boolean> overrides = new HashMap<>();
-        List<String> invalid = new ArrayList<>();
-        
+        Map<CosmeticSlot, Boolean> overrides = new HashMap<>();
+        List<EquippedCosmetic> invalid = new ArrayList<>();
+
         // Iterate through the player's equipped cosmetics.
-        for (String cosmetic : data.getCosmetics()) {
-            // Handle "empty slot" markers.
-            Slot slot = Slot.valueOf(cosmetic.replace("No", ""));
-            
+        for (var equippedCosmetic : data.getCosmetics()) {
+            var attachment = AttachmentsRegistry.get(equippedCosmetic.getId());
+            if (attachment == null) {
+                invalid.add(equippedCosmetic);
+                continue;
+            }
+
+            var slot = attachment.slot();
+
             if (slot != null) {
                 overrides.put(slot, true);
-                continue;
             }
-            
-            // Parse cosmetic ID and variant name.
-            String cosmId = cosmetic;
-            String variant = "";
-            
+
+            // Add the attachment's primary slot and any extra override slots to the override map.
+            if (nonOverridingSlots.contains(attachment.slot())) {
+                overrides.put(attachment.slot(), false);
+            }
+
+            SlotConnection connection = connections.stream().filter(c -> c.mainSlot() == attachment.slot()).findFirst().orElse(null);
+
             String gradientSet = "";
             String gradientId = "";
-            
-            if (cosmetic.contains("$")) {
-                String[] split = cosmetic.split("\\$");
-                cosmId = split[0];
-                variant = split[1];
-            }
-            
-            if (cosmetic.contains("%")) {
-                String[] gradStuff = cosmetic.split("%");
-                String[] split = gradStuff[1].split(":");
-                
-                cosmId = gradStuff[0];
-                gradientSet = split[0];
-                gradientId = split[1];
-            }
-            
-            // Find the attachment in the registry.
-            Attachment attachment = attachmentsRegistry.get(cosmId);
-            if (attachment == null) {
-                invalid.add(cosmId);
-                continue;
-            }
-            
-            // Add the attachment's primary slot and any extra override slots to the override map.
-            if (nonOverridingSlots.contains(attachment.data().slot())) {
-                overrides.put(attachment.data().slot(), false);
-            }
-            
-            SlotConnection connection = connections.stream()
-                .filter(c -> c.mainSlot() == attachment.data().slot())
-                .findFirst().orElse(null);
-            
-            if(connection != null) {
-                if(connection.gradientSet == null && connection.connectedSlot == null)
+
+            if (connection != null) {
+                if (connection.gradientSet == null && connection.connectedSlot == null)
                     throw new IllegalArgumentException("Cannot have a connection with no gradient set nor connected slot!");
-                
+
                 gradientSet = connection.gradientSet();
-                CosmeticData.FormattedItemData itemData = null;
-                
-                if(connection.connectedSlot() != null) itemData = data.getCosmetic(connection.connectedSlot());
-            
-                if(itemData != null) {
-                    gradientSet = itemData.getColour().getGradientSet();
-                    gradientId = itemData.getColour().getGradientID();
+
+                CustomCosmetic connectedCosmetic = data.getCosmetic(connection.connectedSlot());
+                if (connectedCosmetic != null) { // TODO: STORE IN CUSTOM STRUCTURE for color selection
+                    gradientSet = connectedCosmetic.defaultColor().getGradientSet();
+                    gradientId = connectedCosmetic.defaultColor().getGradientID();
                 } else {
                     gradientId = connection.defaultId.apply(playerSkin);
                 }
-            } else if (gradientSet.isEmpty() && !attachment.data().gradientSet().isEmpty()) {
-                String set = attachment.data().gradientSet();
+            } else if (!attachment.gradientSet().isEmpty()) {
+                String set = attachment.gradientSet();
                 GradientSet gs = coloursDataSet.getGradientSet(set);
-                if (gs != null && !gs.getColourList().isEmpty()) {
+                if (gs != null && !gs.colourList().isEmpty()) {
                     gradientSet = set;
-                    gradientId = gs.getColourList().get(0);
+                    gradientId = gs.colourList().getFirst();
                 }
             }
-            
+
             // Create the model attachment and add it to the list.
-            attachments.add(attachment.makeModel(variant, new Colour(gradientSet, gradientId)));
+            attachments.add(attachment.makeModel(null, new Colour(gradientSet, gradientId)));
         }
-        
+
         // Clean up any invalid cosmetics from the player's data.
-        for (String inv : invalid) {
+        for (var inv : invalid) {
             data.removeCosmetic(inv);
         }
-        
+
         // Restore the base skin, skipping parts that are overridden by custom cosmetics.
         restoreSkinWithOverrides(ref, attachments, overrides);
-        store.replaceComponent(ref, CosmeticData.INSTANCE, data);
-        
+
         // Create a new player model with the combined attachments.
         Model newModel = new Model(player.getDisplayName() + "_CustomModel", model.getScale(), model.getRandomAttachmentIds(), attachments.toArray(new ModelAttachment[0]), model.getBoundingBox(), model.getModel(), model.getTexture(), model.getGradientSet(), model.getGradientId(), model.getEyeHeight(), model.getCrouchOffset(), model.getAnimationSetMap(), model.getCamera(), model.getLight(), model.getParticles(), model.getTrails(), model.getPhysicsValues(), model.getDetailBoxes(), model.getPhobia(), model.getPhobiaModelAssetId());
-        
+
         // Apply the new model to the player.
         store.replaceComponent(ref, ModelComponent.getComponentType(), new ModelComponent(newModel));
-        store.replaceComponent(ref, CosmeticData.INSTANCE, data);
+        store.replaceComponent(ref, CosmeticComponent.getComponentType(), data);
     }
-    
+
     // Re-applies the player's default Hytale skin parts (hair, eyes, etc.) unless they
     // are marked as being overridden by a custom cosmetic.
-    private void restoreSkinWithOverrides(Ref<EntityStore> ref, List<ModelAttachment> attachments, Map<Slot, Boolean> overrides) {
+    private void restoreSkinWithOverrides(Ref<EntityStore> ref, List<ModelAttachment> attachments, Map<CosmeticSlot, Boolean> overrides) {
         CosmeticRegistry registry = CosmeticsModule.get().getRegistry();
-        
+
         Store<EntityStore> store = ref.getStore();
         PlayerSkin playerSkin = store.getComponent(ref, PlayerSkinComponent.getComponentType()).getPlayerSkin();
-        
+
         String gradientId = playerSkin.bodyCharacteristic.split("\\.")[1];
         String[] bodyCharacteristicParts = playerSkin.bodyCharacteristic.split("\\.");
-        
+
         // This large block of code checks each vanilla cosmetic slot. If it's not in the 'overrides' map,
         // it resolves the corresponding attachment from the vanilla registry and adds it to the list.
         var bodyCharacteristic = registry.getBodyCharacteristics().get(bodyCharacteristicParts[0]);
         if (bodyCharacteristic != null) {
             attachments.add(ModelUtils.resolveAttachment(bodyCharacteristic, bodyCharacteristicParts, gradientId));
         }
-        
-        if (!overrides.getOrDefault(CharacterSlot.Beards, false)) {
+
+        if (!overrides.getOrDefault(CosmeticSlot.Beards, false)) {
             if (playerSkin.facialHair != null) {
                 String[] facialHairsParts = playerSkin.facialHair.split("\\.");
                 var facialHairs = registry.getFacialHairs().get(facialHairsParts[0]);
@@ -805,8 +476,8 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
-        if (!overrides.getOrDefault(CharacterSlot.Ears, false)) {
+
+        if (!overrides.getOrDefault(CosmeticSlot.Ears, false)) {
             if (playerSkin.ears != null) {
                 String[] earsParts = playerSkin.ears.split("\\.");
                 var ears = registry.getEars().get(earsParts[0]);
@@ -815,8 +486,8 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
-        if (!overrides.getOrDefault(CharacterSlot.Eyebrows, false)) {
+
+        if (!overrides.getOrDefault(CosmeticSlot.Eyebrows, false)) {
             if (playerSkin.eyebrows != null) {
                 String[] eyebrowsParts = playerSkin.eyebrows.split("\\.");
                 var eyebrows = registry.getEyebrows().get(eyebrowsParts[0]);
@@ -825,8 +496,8 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
-        if (!overrides.getOrDefault(CharacterSlot.Eyes, false)) {
+
+        if (!overrides.getOrDefault(CosmeticSlot.Eyes, false)) {
             if (playerSkin.eyes != null) {
                 String[] eyesParts = playerSkin.eyes.split("\\.");
                 var eyes = registry.getEyes().get(eyesParts[0]);
@@ -835,8 +506,8 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
-        if (!overrides.getOrDefault(CharacterSlot.Faces, false)) {
+
+        if (!overrides.getOrDefault(CosmeticSlot.Faces, false)) {
             if (playerSkin.face != null) {
                 String[] faceParts = playerSkin.face.split("\\.");
                 var face = registry.getFaces().get(faceParts[0]);
@@ -845,8 +516,8 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
-        if (!overrides.getOrDefault(CharacterSlot.Mouths, false)) {
+
+        if (!overrides.getOrDefault(CosmeticSlot.Mouths, false)) {
             if (playerSkin.mouth != null) {
                 String[] mouthsParts = playerSkin.mouth.split("\\.");
                 var mouths = registry.getMouths().get(mouthsParts[0]);
@@ -855,8 +526,8 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
-        if (!overrides.getOrDefault(CharacterSlot.Haircuts, false)) {
+
+        if (!overrides.getOrDefault(CosmeticSlot.Haircuts, false)) {
             if (playerSkin.haircut != null) {
                 String[] haircutsParts = playerSkin.haircut.split("\\.");
                 var haircuts = registry.getHaircuts().get(haircutsParts[0]);
@@ -865,7 +536,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         /* Cosmetics Slots */
         if (!overrides.getOrDefault(CosmeticSlot.Capes, false)) {
             if (playerSkin.cape != null) {
@@ -876,7 +547,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Face_Accessories, false)) {
             if (playerSkin.faceAccessory != null) {
                 String[] faceAccessoriesParts = playerSkin.faceAccessory.split("\\.");
@@ -886,7 +557,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Gloves, false)) {
             if (playerSkin.gloves != null) {
                 String[] glovesParts = playerSkin.gloves.split("\\.");
@@ -896,7 +567,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Head, false)) {
             if (playerSkin.headAccessory != null) {
                 String[] headAccessoriesParts = playerSkin.headAccessory.split("\\.");
@@ -906,7 +577,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Overpants, false)) {
             if (playerSkin.overpants != null) {
                 String[] overpantsParts = playerSkin.overpants.split("\\.");
@@ -916,7 +587,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Overtops, false)) {
             if (playerSkin.overtop != null) {
                 String[] overtopsParts = playerSkin.overtop.split("\\.");
@@ -926,7 +597,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Pants, false)) {
             if (playerSkin.pants != null) {
                 String[] pantsParts = playerSkin.pants.split("\\.");
@@ -936,7 +607,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Shoes, false)) {
             if (playerSkin.shoes != null) {
                 String[] shoesParts = playerSkin.shoes.split("\\.");
@@ -946,7 +617,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Undertops, false)) {
             if (playerSkin.undertop != null) {
                 String[] undertopsParts = playerSkin.undertop.split("\\.");
@@ -956,7 +627,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Underwears, false)) {
             if (playerSkin.underwear != null) {
                 String[] underwearParts = playerSkin.underwear.split("\\.");
@@ -966,7 +637,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (!overrides.getOrDefault(CosmeticSlot.Ears_Accessories, false)) {
             if (playerSkin.earAccessory != null) {
                 String[] earAccessoriesParts = playerSkin.earAccessory.split("\\.");
@@ -976,7 +647,7 @@ public class AttachmentsRegistry {
                 }
             }
         }
-        
+
         if (playerSkin.skinFeature != null) {
             String[] skinFeaturesParts = playerSkin.skinFeature.split("\\.");
             var skinFeatures = registry.getSkinFeatures().get(skinFeaturesParts[0]);
@@ -985,393 +656,165 @@ public class AttachmentsRegistry {
             }
         }
     }
-    
+
     // Checks if a player has marked a specific slot as empty.
-    public boolean isEmptySlot(Ref<EntityStore> ref, Slot slot) {
-        return containsChange(ref, "No" + slot.name());
+    public boolean isEmptySlot(Ref<EntityStore> ref, CosmeticSlot slot) {
+        return !isEquipped(ref, slot);
     }
-    
-    // Checks if a player has a specific cosmetic or one of its variants equipped.
-    public boolean containsChange(Ref<EntityStore> ref, String cosmeticId) {
-        Store<EntityStore> store = ref.getStore();
-        CosmeticData data = store.getComponent(ref, CosmeticData.INSTANCE);
-        
-        if (data == null) return false;
-        
-        for (String cosmetic : data.getCosmetics()) {
-            if (cosmetic.equals(cosmeticId)) return true;
-            if (cosmetic.startsWith(cosmeticId + "$")) return true;
-            if (cosmetic.startsWith(cosmeticId + "#")) return true;
-            if (cosmetic.startsWith(cosmeticId + "%")) return true;
-        }
-        
-        return false;
-    }
-    
-    // Gets the name of the equipped variant for a given base cosmetic ID.
-    // @return The variant name, or null if no variant is equipped.
-    public String getEquippedVariant(Ref<EntityStore> ref, String cosmeticId) {
-        Store<EntityStore> store = ref.getStore();
-        CosmeticData data = store.getComponent(ref, CosmeticData.INSTANCE);
-        
-        if (data == null) return null;
-        
-        for (String cosmetic : data.getCosmetics()) {
-            if (cosmetic.startsWith(cosmeticId + "$")) {
-                return cosmetic.split("\\$")[1];
-            }
-        }
-        
-        return null;
-    }
-    
+
     // Checks if a player has a specific cosmetic ID (including variant) equipped.
     public boolean isEquipped(Ref<EntityStore> ref, String cosmeticId) {
         Store<EntityStore> store = ref.getStore();
-        CosmeticData data = store.getComponent(ref, CosmeticData.INSTANCE);
-        
+        CosmeticComponent data = store.getComponent(ref, CosmeticComponent.getComponentType());
+
         if (data == null) return false;
-        
-        return data.getCosmetics().contains(cosmeticId);
+
+        if (data.getCosmetics().contains(cosmeticId))
+            return true;
+
+        var a = AttachmentsRegistry.get(cosmeticId);
+        return a != null && a.variants().containsKey(cosmeticId);
     }
-    
+
+    public boolean isEquipped(Ref<EntityStore> ref, CosmeticSlot slot) {
+        return getEquipped(ref, slot) != null;
+    }
+
+    public CustomCosmetic getEquipped(Ref<EntityStore> ref, CosmeticSlot slot) {
+        Store<EntityStore> store = ref.getStore();
+        CosmeticComponent data = store.getComponent(ref, CosmeticComponent.getComponentType());
+
+        if (data == null)
+            return null;
+
+        for (var cosmetic : data.getCosmetics()) {
+            var current = AttachmentsRegistry.get(cosmetic.getId());
+            if (current != null && slot == current.slot) {
+                return current;
+            }
+        }
+
+        return null;
+    }
+
     // Removes a cosmetic (and any of its variants) from a player.
     public void removeCosmetic(Ref<EntityStore> ref, String cosmeticId) {
         removeCosmetic(ref, cosmeticId, false);
     }
-    
-    private boolean isSlotUsed(CosmeticData data, Slot slot) {
-        for (String c : data.getCosmetics()) {
-            if (c.startsWith("No")) continue;
-            
-            String cBase = c.split("\\$")[0];
-            if (cBase.contains("%")) {
-                cBase = cBase.split("%")[0];
-            }
-            
-            Attachment att = attachmentsRegistry.get(cBase);
-            if (att != null) {
-                if (att.data().slot() == slot) return true;
-                if (att.data().slotOverrides().contains(slot.name())) return true;
-            }
-        }
-        return false;
-    }
-    
-    public void removeCosmetic(Ref<EntityStore> ref, String cosmeticId, boolean multiSelect) {
+
+    public void removeCosmetic(Ref<EntityStore> ref, @Nonnull String cosmeticId, boolean multiSelect) {
         Store<EntityStore> store = ref.getStore();
-        CosmeticData data = store.getComponent(ref, CosmeticData.INSTANCE);
-        
+        CosmeticComponent data = store.getComponent(ref, CosmeticComponent.getComponentType());
+
         if (data == null) return;
-        
-        String baseId = cosmeticId.split("\\$")[0];
-        if (baseId.contains("%")) {
-            baseId = baseId.split("%")[0];
-        }
-        Attachment attachment = attachmentsRegistry.get(baseId);
-        
-        // Find all cosmetics to remove (base ID and any variants).
-        List<String> toRemove = new ArrayList<>();
-        
-        for (String cosmetic : data.getCosmetics()) {
-            if (cosmetic.equals(cosmeticId) || cosmetic.startsWith(cosmeticId + "$") || cosmetic.startsWith(cosmeticId + "%")) {
-                toRemove.add(cosmetic);
+
+        CustomCosmetic customCosmetic = CustomCosmetic.getAssetStore().getAssetMap().getAsset(cosmeticId);
+
+        data.getCosmetics().removeIf(x -> x.getId().equals(cosmeticId));
+
+        if (customCosmetic != null && !multiSelect) {
+            Set<CosmeticSlot> slotsToCheck = new HashSet<>();
+            if (customCosmetic.slot() != null) {
+                slotsToCheck.add(customCosmetic.slot());
             }
-        }
-        
-        for (String s : toRemove) {
-            data.removeCosmetic(s);
-        }
-        
-        if (cosmeticId.startsWith("No")) {
-            Slot slot = Slot.valueOf(cosmeticId.replace("No", ""));
-            if (slot != null && !multiSelect) {
-                List<String> dependentCosmetics = new ArrayList<>();
-                for (String cosmetic : data.getCosmetics()) {
-                    if (cosmetic.startsWith("No")) continue;
-                    
-                    String id = cosmetic.split("\\$")[0];
-                    if (id.contains("%")) {
-                        id = id.split("%")[0];
-                    }
-                    Attachment att = attachmentsRegistry.get(id);
-                    if (att != null) {
-                        if (att.data().slotOverrides().contains(slot.name()) || att.data().slot() == slot) {
-                            dependentCosmetics.add(cosmetic);
-                        }
-                    }
-                }
-                
-                for (String dep : dependentCosmetics) {
-                    removeCosmetic(ref, dep, false);
-                }
-            }
-        } else if (attachment != null && !multiSelect) {
-            Set<String> slotsToCheck = new HashSet<>();
-            if (attachment.data().slot() != null) {
-                slotsToCheck.add(attachment.data().slot().name());
-            }
-            slotsToCheck.addAll(attachment.data().slotOverrides());
-            
-            for (String slotName : slotsToCheck) {
-                Slot s = Slot.valueOf(slotName);
-                if (s != null && !isSlotUsed(data, s)) {
-                    data.removeCosmetic("No" + slotName);
+            slotsToCheck.addAll(customCosmetic.slotOverrides());
+
+            for (var s : slotsToCheck) {
+                if (!data.isSlotUsed(s)) {
+                    data.removeCosmetic(s);
                 }
             }
         }
-        
+
+        store.replaceComponent(ref, CosmeticComponent.getComponentType(), data);
+
         rebuildSkinWithCosmetics(ref);
     }
-    
+
     // Adds a cosmetic to a player.
     // @param multiSelect If true, does not clear the slot and ignores slot overrides.
-    public void addCosmetic(Ref<EntityStore> ref, String cosmeticId, boolean multiSelect) {
-        String cosmId = cosmeticId;
-        
-        if (cosmeticId.contains("$")) {
-            String[] split = cosmeticId.split("\\$");
-            cosmId = split[0];
-        }
-        
-        if (cosmeticId.contains("%")) {
-            String[] split = cosmeticId.split("%");
-            cosmId = split[0];
-        }
-        
+    public void addCosmetic(Ref<EntityStore> ref, String cosmetic, String variant, Colour colour, boolean multiSelect) {
         // Fix for Issue 3: Remove any existing version of this cosmetic (base, variant, or gradient)
         // This ensures we don't retain old colors/variants if we are equipping the base one.
-        removeCosmetic(ref, cosmId, true);
-        
+        removeCosmetic(ref, cosmetic, true);
+
         Store<EntityStore> store = ref.getStore();
-        CosmeticData data = store.getComponent(ref, CosmeticData.INSTANCE);
-        
+        CosmeticComponent data = store.getComponent(ref, CosmeticComponent.getComponentType());
+
         if (data == null) return;
-        
-        Attachment attachment = attachmentsRegistry.get(cosmId);
-        Slot slot = attachment != null ? attachment.data().slot() : null;
-        Colour defColor = attachment != null ? attachment.data().defaultColor() : null;
-        
-        if (slot == null && cosmId.startsWith("No")) {
-            try {
-                slot = Slot.valueOf(cosmId.replace("No", ""));
-            } catch (Exception _) {
-            }
-        }
-        
+
+        CustomCosmetic attachment = CustomCosmetic.getAssetMap().getAsset(cosmetic);
+        CosmeticSlot slot = attachment != null ? attachment.slot() : null;
+
         boolean isNonOverriding = slot != null && nonOverridingSlots.contains(slot);
         boolean shouldClear = !multiSelect && !isNonOverriding;
-        
+
         if (shouldClear) {
             if (slot != null) {
                 clearSlot(ref, slot);
-                if (!cosmId.startsWith("No")) {
-                    data.addCosmetic("No" + slot.name());
-                }
-            } else {
-                clearSlot(ref, cosmId);
-            }
-        } else {
-            if (slot != null && !cosmId.startsWith("No")) {
-                data.removeCosmetic("No" + slot.name());
+                data.removeCosmetic(slot);
             }
         }
-        
+
         // Add any necessary slot overrides for this cosmetic.
         if (attachment != null && !multiSelect) {
-            for (String overrideSlot : attachment.data().slotOverrides()) {
-                clearSlot(ref, Slot.valueOf(overrideSlot));
-                data.addCosmetic("No" + overrideSlot);
+            for (var overrideSlot : attachment.slotOverrides()) {
+                clearSlot(ref, overrideSlot);
+                data.removeCosmetic(overrideSlot);
             }
         }
-        
-        if (defColor != null && !cosmeticId.contains("%") && !cosmeticId.contains("$"))
-            cosmeticId = defColor.apply(cosmeticId);
-        
-        data.addCosmetic(cosmeticId);
+
+        if (attachment != null) {
+            data.addCosmetic(attachment, variant, colour);
+        }
+
         rebuildSkinWithCosmetics(ref);
     }
-    
+
     // Clears all cosmetics from a given slot, determined by a cosmetic ID.
-    public void clearSlot(Ref<EntityStore> ref, String cosmeticId) {
-        String id = cosmeticId;
-        
-        if (id.contains("$")) {
-            id = id.split("\\$")[0];
-        }
-        if (id.contains("%")) {
-            id = id.split("%")[0];
-        }
-        
-        if (cosmeticId.contains("No")) {
-            clearSlot(ref, Slot.valueOf(cosmeticId.replace("No", "")));
-            return;
-        }
-        
-        Attachment attachment = attachmentsRegistry.get(id);
-        
+    public void clearSlot(Ref<EntityStore> ref, String id) {
+        CustomCosmetic attachment = CustomCosmetic.getAssetMap().getAssetMap().get(id);
+
         if (attachment == null) return;
-        
-        clearSlot(ref, attachment.data().slot());
+
+        clearSlot(ref, attachment.slot());
     }
-    
+
     // Clears all cosmetics from a specific slot.
-    public void clearSlot(Ref<EntityStore> ref, Slot slot) {
+    public void clearSlot(Ref<EntityStore> ref, CosmeticSlot slot) {
         Store<EntityStore> store = ref.getStore();
-        CosmeticData data = store.getComponent(ref, CosmeticData.INSTANCE);
-        
+        CosmeticComponent data = store.getComponent(ref, CosmeticComponent.getComponentType());
+
         if (data == null) return;
-        
-        List<String> toRemove = new ArrayList<>();
-        
-        // Find all cosmetics belonging to the specified slot.
-        for (String cosmetic : data.getCosmetics()) {
-            if (cosmetic.equals("No" + slot.name())) {
-                toRemove.add(cosmetic);
-                continue;
-            }
-            
-            String id = cosmetic;
-            if (id.contains("$")) {
-                id = id.split("\\$")[0];
-            }
-            if (id.contains("%")) {
-                id = id.split("%")[0];
-            }
-            
-            Attachment attachment = attachmentsRegistry.get(id);
-            
-            if (attachment == null) {
-                if (cosmetic.startsWith("No")) {
-                    continue;
-                }
-                
-                // Remove invalid cosmetics.
-                toRemove.add(cosmetic);
-                continue;
-            }
-            
-            if (attachment.data().slot() == slot) {
-                toRemove.add(cosmetic);
-            }
-        }
-        
-        // Remove them.
-        for (String rev : toRemove) {
-            removeCosmetic(ref, rev);
-        }
-        
+
+        data.getCosmetics().removeIf(x -> slot.equals(AttachmentsRegistry.get(x.getId()).slot()));
         rebuildSkinWithCosmetics(ref);
     }
-    
+
     // Clears all wearable cosmetics from the player.
     public void clearCosmetics(Ref<EntityStore> ref) {
         for (CosmeticSlot slot : CosmeticSlot.values()) {
             clearSlot(ref, slot);
         }
     }
-    
+
     // Clears all character parts from the player.
     public void clearCharacter(Ref<EntityStore> ref) {
-        for (CharacterSlot slot : CharacterSlot.values()) {
-            clearSlot(ref, slot);
+        for (CosmeticSlot slot : CosmeticSlot.values()) {
+            if (slot.getType() == SlotType.CHARACTER)
+                clearSlot(ref, slot);
         }
     }
-    
+
     // Clears all custom attachments (both cosmetics and character parts) from the player.
     public void clearAll(Ref<EntityStore> ref) {
         clearCosmetics(ref);
         clearCharacter(ref);
     }
-    
-    // Registers a new attachment with default paths and no variants.
-    public void register(String name, Slot slot) {
-        register(name, slot, Map.of());
-    }
-    
-    // Registers a new attachment with default paths but with specified variants.
-    public void register(String name, Slot slot, Map<String, Variant> variants) {
-        String attachmentPath = "Resources/";
-        
-        if (slot.getType() == SlotType.CHARACTER) {
-            attachmentPath += "Characters/";
-        } else if (slot.getType() == SlotType.COSMETIC) {
-            attachmentPath += "Cosmetics/";
-        }
-        
-        String[] split = name.split("#");
-        
-        
-        attachmentPath += String.format("%s/%s", slot, split[1]);
-        
-        // Create AttachmentData with conventional paths.
-        AttachmentData attData = new AttachmentData(
-            String.format("%s/%s.blockymodel", attachmentPath, split[1]),
-            String.format("%s/%s.png", attachmentPath, split[1]),
-            String.format("%s/Icon/%s.png", attachmentPath, split[1]),
-            variants,
-            "",
-            new ArrayList<>(),
-            new Colour("", "")
-        );
-        attData.slot = slot;
-        
-        register(name, attData);
-    }
-    
-    // Registers a new attachment with default paths but with specified variants.
-    public void register(String name, Slot slot, String gradientSet) {
-        String attachmentPath = "Resources/";
-        
-        if (slot.getType() == SlotType.CHARACTER) {
-            attachmentPath += "Characters/";
-        } else if (slot.getType() == SlotType.COSMETIC) {
-            attachmentPath += "Cosmetics/";
-        }
-        
-        String[] split = name.split("#");
-        
-        attachmentPath += String.format("%s/%s_Colors_%s", slot, split[1], gradientSet);
-        
-        // Create AttachmentData with conventional paths.
-        AttachmentData attData = new AttachmentData(
-            String.format("%s/%s.blockymodel", attachmentPath, split[1]),
-            String.format("%s/%s.png", attachmentPath, split[1]),
-            String.format("%s/Icon/%s.png", attachmentPath, split[1]),
-            Map.of(),
-            gradientSet,
-            List.of(),
-            new Colour("", "")
-        );
-        attData.slot = slot;
-        
-        register(name, attData);
-    }
-    
-    // The core registration method. Adds a fully-formed AttachmentData object to the registry.
-    public void register(String name, AttachmentData attachmentData) {
-        attachmentsRegistry.put(name, new Attachment(name, attachmentData));
-    }
-    
-    // Utility method to find the key for a given Attachment object.
-    public String getKey(Attachment e) {
-        for (Map.Entry<String, Attachment> entry : attachmentsRegistry.entrySet()) {
-            if (entry.getValue() == e) {
-                return entry.getKey();
-            }
-        }
-        
-        return null;
-    }
-    
-    // Clears all attachments from the registry. Used during reload.
-    public void clear() {
-        attachmentsRegistry.clear();
-    }
-    
+
+
     // Returns a sorted list of all registered cosmetic IDs.
     public List<String> getAttachmentsList() {
-        return attachmentsRegistry.keySet().stream().sorted().collect(Collectors.toList());
+        return CustomCosmetic.getAssetMap().getAssetMap().keySet().stream().sorted().collect(Collectors.toList());
     }
-    
 }
